syntax = "proto3";

package indexed_operations;
option go_package = "gitlab.com/pietroski-software-company/lightning-db/lightning-node/go-lightning-node/schemas/generated/go/transactions/operations/indexed/indexed_operations;grpc_indexed_ops";

import "transactions/operations/indexed/indexed_operation_messages.proto";
import "transactions/operations/operation_messages.proto";

service IndexedOperation {
  // IndexedGet
  rpc IndexedGet(GetIndexedRequest) returns (operations.GetResponse);
  // IndexedSet
  rpc IndexedSet(SetIndexedRequest) returns (operations.SetResponse);
  // IndexedDelete
  rpc IndexedDelete(DeleteIndexedRequest) returns (operations.DeleteResponse);
  // IndexedList
  rpc IndexedList(ListIndexedRequest) returns (operations.ListResponse);
}
